# hakoniwa-drone-control-adapter

./: CMakeLists.txt  README.md
include/hakoniwa/drone/control_adapter/: allocation_feedback_policy.hpp  altitude_control_backend.hpp  attitude_control_backend.hpp  control_allocation_backend.hpp  horizontal_position_control_backend.hpp  position_control_3d_backend.hpp  rate_control_backend.hpp
test/: feedback_policy_examples.cpp  frequency_usage_examples.cpp  usage_examples.cpp
test/hakoniwa/drone/control_adapter/: feedback_policy_examples.hpp  frequency_usage_examples.hpp  usage_examples.hpp
